Fix overflow on small devices

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ html, body {
     font-size: 20px;
     line-height: 1.3;
     margin: 0;
+    overflow-x: hidden;
     color: var(--text-color);
     background-color: var(--off-white);
     position: relative;
